--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <main>
         <div class="container">
             <div class="circle">
-                <input type="number" min="0">
-                <input type="number" min="0">
-                <input type="number" min="0">
-                <button>Színezz!</button>
+                <input type="range" min="0">
+                <input type="range" min="0">
+                <input type="range" min="0">
+
             </div>
         </div>
     </main>
